<resources>
    <string name="app_name">JimJam</string>
    <string name="greeting">Hey there Jim Jammers!</string>
    <string name="new_job_sleep_20_seconds">New Job: Sleep 20 seconds</string>
    <string name="new_job_needs_network">New Job: Needs Network</string>
    <string name="new_job_high_priority">New Job: High Priority</string>
    <string name="new_job_log_sleep">New Job: Log Sleep</string>
    <string name="log_saved_jobs_to_logcat">Log Saved Jobs to Logcat</string>
    <string name="dump_job_database">Dump Job Database</string>
    <string name="new_labelled_job">New Labelled Job</string>
    <string name="default_label">abc</string>
</resources>
