<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context=".MainActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:text="@string/greeting"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ToggleButton
            style="@style/button"
            android:id="@+id/wifi_toggler"
            android:textOff="Wifi OFF"
            android:textOn="Wifi ON"
            android:checked="false"/>

        <Button
            style="@style/button"
            android:id="@+id/new_job_button_sleep_for_twenty"
            android:text="@string/new_job_sleep_20_seconds"/>

        <Button
            style="@style/button"
            android:id="@+id/new_job_button_needs_network"
            android:text="@string/new_job_needs_network"/>

        <Button
            style="@style/button"
            android:id="@+id/new_job_button_high_priority"
            android:text="@string/new_job_high_priority"/>

        <Button
            style="@style/button"
            android:id="@+id/new_job_button_log_sleep"
            android:text="@string/new_job_log_sleep"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_space_top"
            android:orientation="horizontal">

            <Button
                style="@style/button"
                android:id="@+id/new_labelled_job"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_marginTop="0dp"
                android:singleLine="true"
                android:text="@string/new_labelled_job"/>

            <EditText
                android:id="@+id/edit_text_labelled_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:textSize="22sp"
                android:text="@string/default_label"/>
        </LinearLayout>

        <Button
            style="@style/button"
            android:id="@+id/log_saved_jobs_to_logcat"
            android:background="@drawable/background_greenable"
            android:text="@string/log_saved_jobs_to_logcat"/>

        <Button
            style="@style/button"
            android:id="@+id/dump_job_database"
            android:background="@drawable/background_redable"
            android:text="@string/dump_job_database"/>
    </LinearLayout>
</ScrollView>
